--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  google_maps_flutter: ^0.5.21+15
+  #image_picker: ^0.4.12
+  firebase_ml_vision: ^0.9.3+5
+  http: ^0.12.0+3
+  intl: ^0.16.0
 
 dev_dependencies:
   flutter_test:
@@ -41,9 +46,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/geese1.jpg
+   - assets/geese2.jpg
+   - assets/geese3.jpg
+   - assets/geese4.jpg
+   - assets/loadingscreen.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -56,6 +64,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+
+  fonts:
+    - family: Pacifico
+      fonts:
+        - asset: fonts/Pacifico-Regular.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
