--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   google_maps_flutter: ^0.5.21+15
   #image_picker: ^0.4.12
   firebase_ml_vision: ^0.9.3+5
+  firebase_database: ^3.1.1
+  firebase_core: any
   http: ^0.12.0+3
   intl: ^0.16.0
 
